@@ -5,6 +5,11 @@
 	<version>3.2.1-SNAPSHOT</version>
 	<name>JmDNS</name>
 	<packaging>jar</packaging>
+	<parent>
+		<groupId>org.sonatype.oss</groupId>
+		<artifactId>oss-parent</artifactId>
+		<version>4</version>
+	</parent>
 	<description>JmDNS is a Java implementation of multi-cast DNS and can be used for service registration and discovery in local area networks. JmDNS is fully compatible with Apple's Bonjour.
 The project was originally started in December 2002 by Arthur van Hoff at Stangeberry. In November 2003 the project was moved to SourceForge, and the name was changed from JRendezvous to JmDNS for legal reasons.
 Many thanks to Stuart Cheshire for help and moral support.</description>
@@ -20,6 +25,32 @@ Many thanks to Stuart Cheshire for help and moral support.</description>
 		<tag>HEAD</tag>
 		<url>https://jmdns.svn.sourceforge.net/svnroot/jmdns</url>
 	</scm>
+	<distributionManagement>
+		<site>
+			<id>jmdns.sf.net</id>
+			<url>scp://shell.sourceforge.net/home/groups/j/jm/jmdns/htdocs</url>
+		</site>
+	</distributionManagement>
+	<issueManagement>
+		<system>sourceforge</system>
+		<url>http://sourceforge.net/tracker/?group_id=93852</url>
+	</issueManagement>
+	<mailingLists>
+		<mailingList>
+			<name>JmDNS Announce Mailing list</name>
+			<subscribe>http://lists.sourceforge.net/mailman/listinfo/jmdns-announce</subscribe>
+			<unsubscribe>http://lists.sourceforge.net/mailman/listinfo/jmdns-announce</unsubscribe>
+			<archive>http://sourceforge.net/mailarchive/forum.php?forum_name=jmdns-announce</archive>
+			<post>jmdns-announce@lists.sourceforge.net</post>
+		</mailingList>
+		<mailingList>
+			<name>JmDNS User Mailing list</name>
+			<subscribe>http://lists.sourceforge.net/mailman/listinfo/jmdns-discuss</subscribe>
+			<unsubscribe>http://lists.sourceforge.net/mailman/listinfo/jmdns-discuss</unsubscribe>
+			<archive>http://sourceforge.net/mailarchive/forum.php?forum_name=jmdns-discuss</archive>
+			<post>jmdns-discuss@lists.sourceforge.net</post>
+		</mailingList>
+	</mailingLists>
 	<developers>
 		<developer>
 			<id>javanator</id>
